objects/Role__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Independent_Reviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Process Role Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Process Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Process Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Role</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>